==> PiSupply/PiJuice/Firmware/Sources-V1.5_2021_02_06/Src/eeprom.c <==
#include "main.h"
#include "eeprom.h"

HAL_StatusTypeDef EE_Init(void)
{
	uint16_t PageStatus0 = 6, PageStatus1 = 6;
	uint16_t VarIdx = 0;
	int16_t x = -1;
	HAL_StatusTypeDef status;
	FLASH_EraseInitTypeDef FlashEraseInit;
	uint32_t pageError;

	/* Get Page0 status */
	PageStatus0 = (*(__IO uint16_t*) PAGE0_BASE_ADDRESS);
	/* Get Page1 status */
	PageStatus1 = (*(__IO uint16_t*) PAGE1_BASE_ADDRESS);

	/* Check for invalid header states and repair if necessary */
	switch (PageStatus0)
	{
	case ERASED:
		if (PageStatus1 == VALID_PAGE) /* Page0 erased, Page1 valid */
		{
			/* Erase Page0 */
			FlashEraseInit.PageAddress = PAGE0_BASE_ADDRESS;
			FlashEraseInit.NbPages = 1u;
			FlashEraseInit.TypeErase = FLASH_TYPEERASE_PAGES;
			status = HAL_FLASHEx_Erase(&FlashEraseInit, &pageError);

			if (HAL_OK != status)
			{
				return status;
			}
		}
		else if (PageStatus1 == RECEIVE_DATA) /* Page0 erased, Page1 receive */
		{
			/* Erase Page0 */
			FlashEraseInit.PageAddress = PAGE0_BASE_ADDRESS;
			FlashEraseInit.NbPages = 1u;
			FlashEraseInit.TypeErase = FLASH_TYPEERASE_PAGES;
			status = HAL_FLASHEx_Erase(&FlashEraseInit, &pageError);

			if (HAL_OK != status)
			{
				return status;
			}

			/* Mark Page1 as valid */
			status = HAL_FLASH_Program(FLASH_TYPEPROGRAM_HALFWORD,
			PAGE1_BASE_ADDRESS, VALID_PAGE);

			/* If program operation was failed, a Flash error code is returned */
			if (HAL_OK != status)
			{
				return status;
			}
		}
		else /* First EEPROM access (Page0&1 are erased) or invalid state -> format EEPROM */
		{
			/* Erase both Page0 and Page1 and set Page0 as valid page */
			status = EE_Format();
			/* If erase/program operation was failed, a Flash error code is returned */
			if (HAL_OK != status)
			{
				return status;
			}
		}
		break;

	case RECEIVE_DATA:
		if (PageStatus1 == VALID_PAGE) /* Page0 receive, Page1 valid */
		{
			/* Transfer data from Page1 to Page0 */
			for (VarIdx = 0; VarIdx < NB_OF_VAR; VarIdx++)
			{
				if ((*(__IO uint16_t*) (PAGE0_BASE_ADDRESS + 6))
						== VirtAddVarTab[VarIdx])
				{
					x = VarIdx;
				}
				if (VarIdx != x)
				{
					/* Read the last variables' updates */
					status = EE_ReadVariable(VirtAddVarTab[VarIdx], &DataVar);
					/* In case variable corresponding to the virtual address was found */
					if (HAL_OK == status)
					{
						/* Transfer the variable to the Page0 */
						status = EE_VerifyPageFullWriteVariable(
								VirtAddVarTab[VarIdx], DataVar);
						/* If program operation was failed, a Flash error code is returned */
						if (HAL_OK != status)
						{
							return status;
						}
					}
				}
			}

			/* Mark Page0 as valid */
			status = HAL_FLASH_Program(FLASH_TYPEPROGRAM_HALFWORD,
			PAGE0_BASE_ADDRESS, VALID_PAGE);

			/* If program operation was failed, a Flash error code is returned */
			if (HAL_OK != status)
			{
				return status;
			}

			/* Erase Page1 */
			FlashEraseInit.PageAddress = PAGE1_BASE_ADDRESS;
			FlashEraseInit.NbPages = 1u;
			FlashEraseInit.TypeErase = FLASH_TYPEERASE_PAGES;
			status = HAL_FLASHEx_Erase(&FlashEraseInit, &pageError);

			if (HAL_OK != status)
			{
				return status;
			}
		}
		else if (PageStatus1 == ERASED) /* Page0 receive, Page1 erased */
		{
			FlashEraseInit.PageAddress = PAGE1_BASE_ADDRESS;
			FlashEraseInit.NbPages = 1u;
			FlashEraseInit.TypeErase = FLASH_TYPEERASE_PAGES;
			status = HAL_FLASHEx_Erase(&FlashEraseInit, &pageError);

			if (HAL_OK != status)
			{
				return status;
			}

			/* Mark Page0 as valid */
			status = HAL_FLASH_Program(FLASH_TYPEPROGRAM_HALFWORD,
			PAGE0_BASE_ADDRESS, VALID_PAGE);

			/* If program operation was failed, a Flash error code is returned */
			if (HAL_OK != status)
			{
				return status;
			}
		}
		else /* Invalid state -> format eeprom */
		{
			/* Erase both Page0 and Page1 and set Page0 as valid page */
			status = EE_Format();
			/* If erase/program operation was failed, a Flash error code is returned */
			if (HAL_OK != status)
			{
				return status;
			}
		}
		break;

	case VALID_PAGE:
		if (PageStatus1 == VALID_PAGE) /* Invalid state -> format eeprom */
		{
			/* Erase both Page0 and Page1 and set Page0 as valid page */
			status = EE_Format();
			/* If erase/program operation was failed, a Flash error code is returned */
			if (HAL_OK != status)
			{
				return status;
			}
		}
		else if (PageStatus1 == ERASED) /* Page0 valid, Page1 erased */
		{
			/* Erase Page1 */
			FlashEraseInit.PageAddress = PAGE1_BASE_ADDRESS;
			FlashEraseInit.NbPages = 1u;
			FlashEraseInit.TypeErase = FLASH_TYPEERASE_PAGES;
			status = HAL_FLASHEx_Erase(&FlashEraseInit, &pageError);

			if (HAL_OK != status)
			{
				return status;
			}
		}
		else /* Page0 valid, Page1 receive */
		{
			/* Transfer data from Page0 to Page1 */
			for (VarIdx = 0; VarIdx < NB_OF_VAR; VarIdx++)
			{
				if ((*(__IO uint16_t*) (PAGE1_BASE_ADDRESS + 6))
						== VirtAddVarTab[VarIdx])
				{
					x = VarIdx;
				}
				if (VarIdx != x)
				{
					/* Read the last variables' updates */
					status = EE_ReadVariable(VirtAddVarTab[VarIdx], &DataVar);
					/* In case variable corresponding to the virtual address was found */
					if (HAL_OK == status)
					{
						/* Transfer the variable to the Page1 */
						status = EE_VerifyPageFullWriteVariable(
								VirtAddVarTab[VarIdx], DataVar);
						/* If program operation was failed, a Flash error code is returned */
						if (HAL_OK != status)
						{
							return status;
						}
					}
				}
			}

			/* Mark Page1 as valid */
			status = HAL_FLASH_Program(FLASH_TYPEPROGRAM_HALFWORD,
			PAGE1_BASE_ADDRESS, VALID_PAGE);

			/* If program operation was failed, a Flash error code is returned */
			if (HAL_OK != status)
			{
				return status;
			}

			/* Erase Page0 */
			FlashEraseInit.PageAddress = PAGE0_BASE_ADDRESS;
			FlashEraseInit.NbPages = 1u;
			FlashEraseInit.TypeErase = FLASH_TYPEERASE_PAGES;
			status = HAL_FLASHEx_Erase(&FlashEraseInit, &pageError);

			if (HAL_OK != status)
			{
				return status;
			}
		}
		break;

	default: /* Any other state -> format eeprom */
		/* Erase both Page0 and Page1 and set Page0 as valid page */
		status = EE_Format();
		/* If erase/program operation was failed, a Flash error code is returned */
		if (HAL_OK != status)
		{
			return status;
		}
		break;
	}

	return HAL_OK;
}

HAL_StatusTypeDef EE_ReadVariable(const uint16_t VirtAddress,
		uint16_t *const Data)
{
	HAL_StatusTypeDef status = HAL_ERROR;
	uint16_t ValidPage = PAGE0;
	uint16_t AddressValue = 0x5555;
	uint32_t Address = 0x08010000, PageStartAddress = 0x08010000;

	/* Get active Page for read operation */
	ValidPage = EE_FindValidPage(READ_FROM_VALID_PAGE);

	/* Check if there is no valid page */
	if (ValidPage == NO_VALID_PAGE)
	{
		return status;
	}

	/* Get the valid Page start Address */
	PageStartAddress = (uint32_t) (EEPROM_START_ADDRESS
			+ (uint32_t) (ValidPage * PAGE_SIZE));

	/* Get the valid Page end Address */
	Address = (uint32_t) ((EEPROM_START_ADDRESS - 2)
			+ (uint32_t) ((1 + ValidPage) * PAGE_SIZE));

	/* Check each active page address starting from end */
	while (Address > (PageStartAddress + 2))
	{
		/* Get the current location content to be compared with virtual address */
		AddressValue = (*(__IO uint16_t*) Address);

		/* Compare the read address with the virtual address */
		if (AddressValue == VirtAddress)
		{
			/* Get content of Address-2 which is variable value */
			*Data = (*(__IO uint16_t*) (Address - 2));

			/* In case variable value is read, reset ReadStatus flag */
			status = HAL_OK;

			break;
		}
		else
		{
			/* Next address location */
			Address = Address - 4;
		}
	}

	return status;
}

static HAL_StatusTypeDef EE_Format(void)
{
	HAL_StatusTypeDef status = HAL_OK;
	FLASH_EraseInitTypeDef FlashEraseInit;
	uint32_t pageError;

	/* Erase Page0 */
	FlashEraseInit.PageAddress = PAGE0_BASE_ADDRESS;
	FlashEraseInit.NbPages = 1u;
	FlashEraseInit.TypeErase = FLASH_TYPEERASE_PAGES;
	status = HAL_FLASHEx_Erase(&FlashEraseInit, &pageError);

	/* Set Page0 as valid page: Write VALID_PAGE at Page0 base address */
	status = HAL_FLASH_Program(FLASH_TYPEPROGRAM_HALFWORD, PAGE0_BASE_ADDRESS,
	VALID_PAGE);

	/* If program operation was failed, a Flash error code is returned */
	if (HAL_OK != status)
	{
		return status;
	}

	/* Erase Page1 */
	FlashEraseInit.PageAddress = PAGE1_BASE_ADDRESS;
	status = HAL_FLASHEx_Erase(&FlashEraseInit, &pageError);

	/* Return Page1 erase operation status */
	return status;
}

static HAL_StatusTypeDef EE_VerifyPageFullWriteVariable(uint16_t VirtAddress,
		uint16_t Data)
{
	HAL_StatusTypeDef status = HAL_OK;
	uint16_t ValidPage = PAGE0;
	uint32_t Address = 0x08010000, PageEndAddress = 0x080107FF;

	/* Get valid Page for write operation */
	ValidPage = EE_FindValidPage(WRITE_IN_VALID_PAGE);

	/* Check if there is no valid page */
	if (ValidPage == NO_VALID_PAGE)
	{
		return NO_VALID_PAGE;
	}

	/* Get the valid Page start Address */
	Address = (uint32_t) (EEPROM_START_ADDRESS
			+ (uint32_t) (ValidPage * PAGE_SIZE));

	/* Get the valid Page end Address */
	PageEndAddress = (uint32_t) ((EEPROM_START_ADDRESS - 2)
			+ (uint32_t) ((1 + ValidPage) * PAGE_SIZE));

	/* Check each active page address starting from begining */
	while (Address < PageEndAddress)
	{
		/* Verify if Address and Address+2 contents are 0xFFFFFFFF */
		if ((*(__IO uint32_t*) Address) == 0xFFFFFFFF)
		{
			/* Set variable data */
			status = HAL_FLASH_Program(FLASH_TYPEPROGRAM_HALFWORD, Address,
					Data);

			/* If program operation was failed, a Flash error code is returned */
			if (HAL_OK != status)
			{
				return status;
			}

			/* Set variable virtual address */
			status = HAL_FLASH_Program(FLASH_TYPEPROGRAM_HALFWORD, Address + 2,
					VirtAddress);

			/* Return program operation status */
			return status;
		}
		else
		{
			/* Next address location */
			Address = Address + 4;
		}
	}

	/* Return PAGE_FULL in case the valid page is full */
	return PAGE_FULL;
}

static HAL_StatusTypeDef EE_PageTransfer(uint16_t VirtAddress, uint16_t Data)
{
	HAL_StatusTypeDef status = HAL_OK;
	uint32_t NewPageAddress = 0x080103FF, OldPageAddress = 0x08010000;
	uint16_t ValidPage = PAGE0, VarIdx = 0;

	FLASH_EraseInitTypeDef FlashEraseInit;
	uint32_t pageError;

	/* Get active Page for read operation */
	ValidPage = EE_FindValidPage(READ_FROM_VALID_PAGE);

	if (ValidPage == PAGE1) /* Page1 valid */
	{
		/* New page address where variable will be moved to */
		NewPageAddress = PAGE0_BASE_ADDRESS;

		/* Old page address where variable will be taken from */
		OldPageAddress = PAGE1_BASE_ADDRESS;
	}
	else if (ValidPage == PAGE0) /* Page0 valid */
	{
		/* New page address where variable will be moved to */
		NewPageAddress = PAGE1_BASE_ADDRESS;

		/* Old page address where variable will be taken from */
		OldPageAddress = PAGE0_BASE_ADDRESS;
	}
	else
	{
		return NO_VALID_PAGE; /* No valid Page */
	}

	/* Set the new Page status to RECEIVE_DATA status */
	status = HAL_FLASH_Program(FLASH_TYPEPROGRAM_HALFWORD, NewPageAddress,
	RECEIVE_DATA);

	/* If program operation was failed, a Flash error code is returned */
	if (HAL_OK != status)
	{
		return status;
	}

	/* Write the variable passed as parameter in the new active page */
	status = EE_VerifyPageFullWriteVariable(VirtAddress, Data);

	/* If program operation was failed, a Flash error code is returned */
	if (HAL_OK != status)
	{
		return status;
	}

	/* Transfer process: transfer variables from old to the new active page */
	for (VarIdx = 0; VarIdx < NB_OF_VAR; VarIdx++)
	{
		if (VirtAddVarTab[VarIdx] != VirtAddress) /* Check each variable except the one passed as parameter */
		{
			/* Read the other last variable updates */
			status = EE_ReadVariable(VirtAddVarTab[VarIdx], &DataVar);
			/* In case variable corresponding to the virtual address was found */
			if (HAL_OK == status)
			{
				/* Transfer the variable to the new active page */
				status = EE_VerifyPageFullWriteVariable(VirtAddVarTab[VarIdx],
						DataVar);
				/* If program operation was failed, a Flash error code is returned */
				if (HAL_OK != status)
				{
					return status;
				}
			}
		}
	}

	/* Erase the old Page: Set old Page status to ERASED status */

	FlashEraseInit.PageAddress = OldPageAddress;
	FlashEraseInit.NbPages = 1u;
	FlashEraseInit.TypeErase = FLASH_TYPEERASE_PAGES;

	status = HAL_FLASHEx_Erase(&FlashEraseInit, &pageError);

	/* Set Page0 as valid page: Write VALID_PAGE at Page0 base address */
	status = HAL_FLASH_Program(FLASH_TYPEPROGRAM_HALFWORD, PAGE0_BASE_ADDRESS,
	VALID_PAGE);

	/* If program operation was failed, a Flash error code is returned */
	if (HAL_OK != status)
	{
		return status;
	}

	/* Set new Page status to VALID_PAGE status */
	status = HAL_FLASH_Program(FLASH_TYPEPROGRAM_HALFWORD, NewPageAddress,
	VALID_PAGE);

	/* If program operation was failed, a Flash error code is returned */
	if (HAL_OK != status)
	{
		return status;
	}

	/* Return last operation flash status */
	return status;
}
